<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvBeginDate"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/begin_date"
            android:gravity="center"/>

        <EditText
            android:id="@+id/etBeginDate"
            android:layout_width="fill_parent"  android:layout_height="wrap_content"
            android:layout_below="@+id/tvBeginDate"
            android:inputType="text"
            android:gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp" />

        <TextView
            android:id="@+id/tvSort" android:text="@string/sort_order"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_below="@+id/etBeginDate"
            android:gravity="center"
            android:paddingTop="10dp" />

            <Spinner
            android:id="@+id/spSort"
            android:layout_width="match_parent"
            android:layout_below="@+id/tvSort"
            android:entries="@array/sort_array"
            android:layout_height="wrap_content"
        android:gravity="center"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp" />

    <TextView
        android:id="@+id/tvValue" android:text="@string/new_desk_value"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@+id/spSort"
        android:textSize="14dp"
        android:gravity="center"
        android:paddingTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tvValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:id="@+id/news_desks"
        >
        <CheckBox android:id="@+id/checkbox_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_arts" />
        <CheckBox android:id="@+id/checkbox_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_fashion" />
        <CheckBox android:id="@+id/checkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_sports" />
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/news_desks"
        android:id="@+id/buttons">

        <Button
                android:text="@string/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnClear"
                android:layout_alignParentTop="true"
                android:minWidth="180dp"
                android:layout_toRightOf="@+id/btnSave" />

        <Button
            android:text="@string/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:minWidth="180dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</RelativeLayout>
